[gd_scene load_steps=3 format=3 uid="uid://ct30ku46nnib7"]

[ext_resource type="Script" path="res://src/menu/victory_screen.gd" id="1_jgnh0"]
[ext_resource type="PackedScene" uid="uid://cdk2ias047p7b" path="res://src/menu/credits_entry.tscn" id="3_m0psj"]

[node name="VictoryScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( "1_jgnh0" )
CreditsEntry = ExtResource( "3_m0psj" )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
offset_right = 1280.0
offset_bottom = 720.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer"]
offset_left = 523.0
offset_top = 271.0
offset_right = 757.0
offset_bottom = 449.0
theme_override_constants/separation = 12

[node name="ScoreLabel" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer"]
offset_right = 234.0
offset_bottom = 70.0
theme_override_font_sizes/font_size = 48
text = "Score: 500"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsLabel" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer"]
offset_top = 82.0
offset_right = 234.0
offset_bottom = 178.0
theme_override_font_sizes/font_size = 32
text = "Sold: 12
Failed: 50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="."]
rect_min_size = Vector2(120, 50)
offset_left = 580.0
offset_top = 670.0
offset_right = 700.0
offset_bottom = 720.0
size_flags_horizontal = 4
text = "Back to Menu"

[node name="Credits" type="VBoxContainer" parent="."]
offset_left = 886.0
offset_top = 131.0
offset_right = 1192.0
offset_bottom = 591.0
theme_override_constants/separation = 20
__meta__ = {
"_edit_layout_mode": 0,
"_edit_use_custom_anchors": false
}

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
